[workspace]
resolver = "2"
members = [
    "eterm",
    "eterm_viewer",
]

[patch.crates-io]
egui = { git = "https://github.com/emilk/egui", branch = "eterm" }
egui_demo_lib = { git = "https://github.com/emilk/egui", branch = "eterm" }
egui_glium = { git = "https://github.com/emilk/egui", branch = "eterm" }
