[package]
name = "eterm"
version = "0.0.1"
edition = "2021"
rust-version = "1.56"
authors = ["Emil Ernerfeldt <emil.ernerfeldt@gmail.com>"]
description = "Visual terminal for egui"
homepage = "https://github.com/emilk/eterm"
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/emilk/egui"
categories = ["gui"]
keywords = ["gui", "egui", "terminal", "thin client"]
include = [
  "../LICENSE-APACHE",
  "../LICENSE-MIT",
  "**/*.rs",
  "Cargo.toml",
]

[package.metadata.docs.rs]
all-features = true

[lib]

[dependencies]
anyhow = "1.0.43"
bincode = "1.3"
egui = { version = "0.16.0", features = ["serialize"] }
itertools = "0.10"
parking_lot = "0.11.2"
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
zstd = "0.9"

[dev-dependencies]
chrono = "0.4"
egui_demo_lib = { version = "0.16.0", features = ["serialize"] }
tracing-subscriber = "0.3"
