[package]
name = "eterm_viewer"
version = "0.0.1"
edition = "2021"
rust-version = "1.56"
authors = ["Emil Ernerfeldt <emil.ernerfeldt@gmail.com>"]
description = "Remove viewer for eterm, a visual terminal for egui"
homepage = "https://github.com/emilk/eterm"
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/emilk/egui"
categories = ["gui"]
keywords = ["gui", "egui", "terminal", "thin client", "eterm"]
include = [
  "../LICENSE-APACHE",
  "../LICENSE-MIT",
  "**/*.rs",
  "Cargo.toml",
]

[package.metadata.docs.rs]
all-features = true

[dependencies]
argh = "0.1.10"
egui = "0.21.0"
winit = "0.28"
eframe = "0.21.0"
egui_glow = "0.21.0"
glutin = "0.30.6"
glutin-winit = "0.3.0"
egui-winit = "0.21.0"
eterm = { version = "0.0.1", path = "../eterm" }
glow = "0.12.0"
tracing = "0.1"
tracing-subscriber = "0.3"
raw-window-handle = "0.5.1"